<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/nav_home_color"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_notes"
        android:iconTint="@color/nav_notes_color"
        android:title="Notes" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/nav_profile_color"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_summary"
        android:icon="@drawable/ic_summary"
        android:iconTint="@color/nav_summary_color"
        android:title="@string/nav_summary" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:iconTint="@color/nav_settings_color"
        android:title="@string/nav_settings" />

</menu>